harmony implementation changes

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,16 @@
 *.iml
 .gradle
 /local.properties
-/.idea/workspace.xml
+/.idea/caches
 /.idea/libraries
+/.idea/modules.xml
+/.idea/workspace.xml
+/.idea/navEditor.xml
+/.idea/assetWizardSettings.xml
 .DS_Store
 /build
 /captures
 .externalNativeBuild
-/app/src/main/res/values/strings.xml
+/entry/.preview
+.cxx
+/node_modules
