--- a/build.gradle
+++ b/build.gradle
@@ -1,27 +1,34 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply plugin: 'com.huawei.ohos.app'
 
+//For instructions on signature configuration, see https://developer.harmonyos.com/en/docs/documentation/doc-guides/ide_debug_device-0000001053822404#section1112183053510
+ohos {
+    compileSdkVersion 6
+}
+	
 buildscript {
     repositories {
-        jcenter()
-        google()
+        maven {
+            url 'http://repo.ark.tools.huawei.com/artifactory/maven-public/'
+        }
+        maven {
+            url 'http://mirrors.tools.huawei.com/maven/'
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.0'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.huawei.ohos:hap:3.0.1.3'
+        classpath 'com.huawei.ohos:decctest:3.0.1.0'
     }
 }
 
 allprojects {
     repositories {
-        jcenter()
-        google()
-        maven { url 'https://jitpack.io' }
+        mavenCentral()
+        maven {
+            url 'http://repo.ark.tools.huawei.com/artifactory/maven-public/'
+        }
+        maven {
+            url 'http://mirrors.tools.huawei.com/maven/'
+        }
     }
-}
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
 }
